--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     </div>
   </nav>
   <section class="ig-container">
-  <div class="content">
-    <div class="box"> <img class="pic" src="croissant.png" alt=""></div
-    ><div class="box"><img class="pic" src="croissant.png" alt=""></div
-    ><div class="box"><img class="pic" src="croissant.png" alt=""></div>
+  <div>
+    <div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
+    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
+    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div>
+    <div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
+    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
+    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div>
   </div>
 
   </section>
