--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </div>
   </nav>
   <section class="ig-container">
-  <div>
-    <div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
+  <!-- <div> -->
+    <!-- <div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
     ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
     ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div>
     <div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
     ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
-    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div>
-  </div>
+    ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div> -->
+  <!-- </div> -->
 
   </section>
 
