hover works but overlay goes on everything

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div
     ><div class="box"><a href="#"><img class="pic" src="croissant.png" alt=""></a></div> -->
   <!-- </div> -->
+  <!-- <div class="box">
+    <img class="pic" src='croissant.png' alt="">
+    <div class="pic overlay">
+      <p class="caption">hello</p>
+    </div>
+  </div> -->
 
   </section>
 
